# CPPToyDemo

./: .gitignore
3DPointSampleGeneraor/: .clangd  CMakeLists.txt  blue_noise_sample_matrix_halton.cpp  blue_noise_sample_matrix_morton.cpp  blue_noise_sample_matrix_sobol.cpp  gaussian_sample.cpp
3slabs/: CMakeLists.txt  main.cpp
BitArray/: CMakeLists.txt  main.cpp  main2.cpp
EigenExample/: .clangd  2Dand3D.cpp  CMakeLists.txt  box_scale_translate.cpp  eigenVectorAndMatrix.cpp  equal_operator.cpp  get_absolute_min.cpp  less_operator.cpp  main.cpp  matrix2vector.cpp  point2matrix.cpp  random_matrix.cpp  row_col_major_copy.cpp  sparse_matrix.cpp  vector2matrix.cpp  vis_graph.py
EigenExample/.cache/clangd/index/: eigen.hpp.5A52EE039B3C6A39.idx  main.cpp.7E5885572FA79B9A.idx
EigenExample/include/: eigen.hpp
GPUMarchingCubes/: MC_kernel.cu  MarchingCubes.h  test.cpp
MaxClique/: .clangd  Bron-Kerbosch-re.cpp  Bron-Kerbosch.cpp  CMakeLists.txt
Model2UnifromCube/: .clangd  CMakeLists.txt  uniform.cpp
ModelNoise/: CMakeLists.txt  uniform.cpp
ModelTransform/: CMakeLists.txt  point_rotate.cpp  point_translate_zoom.cpp
OBJLoader/: in_obj.cpp
OBJLoaderAndTriQualiy/: CMakeLists.txt  in_obj.cpp  triQuality.cpp
OpenMPExample/: CMakeLists.txt  collapse_loop.cpp  main.cpp  timer.hpp  weight_sum.cpp
SparseMatrix/: main.cpp
cpp_stdExample/: .clangd  CMakeLists.txt  cout_test.cpp  heap_example.cpp  main.cpp  test.cpp  test.h  vector_reserve_resize.cpp
cuBLASExample/: .clangd  CMakeLists.txt  cuBLASCheck.cuh  main.cu
cudaMatrixFillExample/: CMakeLists.txt  cuda_check.cuh  device_query.cuh  matrix_fill.cu  row_sum.cu
readFile/: CMakeLists.txt  compare2file.cpp  main.cpp  main2.cpp
stdFunction/: CMakeLists.txt  main.cpp
stdFunction/.cache/clangd/index/: main.cpp.E8F55134EC95C107.idx
testFunctionArgument/: CMakeLists.txt  main.cu
thrustExample/: .clangd  2dim_vector.cu  CMakeLists.txt  axsum.cu  exclusive_scan.cu  sort_Eigen.cu  unique_Eigen.cu  unique_test.cu
